--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,8 +21,8 @@
         </div>
         <div class="detail-value">
           <select [(ngModel)]="selectedTenantId" (change)="switchTenant()">
-            <option *ngFor="let tenantId of user?.tenantIds" [value]="tenantId">
-              {{ tenantId }}
+            <option *ngFor="let tenant of tenantState?.tenants" [value]="tenant.tenantId">
+              {{ tenant.name }}
             </option>
           </select>
         </div>
@@ -35,7 +35,7 @@
       <button class="logout-button" (click)="logOut()">Log Out</button>
     </div>
     <div *ngIf="!user" class="login-button-container">
-      <button (click)="loginWithRedirect()">Login with Redirect</button>
+      <button (click)="logIn()">Login</button>
     </div>
   </div>
 </div>
